entity_macros/tests/ui/derive/ent/unsupported-union.stderr
error: Expected struct
 --> $DIR/unsupported-union.rs:4:1
  |
4 | union TestEnt {
  | ^^^^^
