entity_macros/tests/ui/derive/ent/unsupported-union.rs
use entity::Ent;

#[derive(Copy, Clone, Ent)]
union TestEnt {
    a: u32,
    b: i32,
}

fn main() {}
